<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NBAStatStream</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_welcome">Welcome to NBA Stat Stream</string>
    <string name="live_game_label">Live Games</string>
    <string name="archived_game_label">Archived Games</string>
    <string name="debuggable_string">true</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="diag_frag_boxscore_title">Enter an ESPN NBA box score</string>
    <string name="hint_espn_boxscore">ESPN box score address</string>
    <string name="edit_box_score_button">Edit</string>
    <string name="empty_box_score">empty box score</string>
    <string name="empty_games">No Games Scheduled</string>
    <string name="pager_4factors_title">4 Factors</string>
    <string name="pager_advbox_title">Advanced Box Score</string>
    <string name="pager_box_title">Box Score</string>
    <string name="pager_shotchart_title">Shot Chart</string>
    <string name="total_score_text">TOT</string>
    <string name="title_pace">Pace</string>
    <string name="title_eff">Eff</string>
    <string name="title_efg">eFG%</string>
    <string name="title_ftfg">FT/FGA</string>
    <string name="title_orebp">ORB%</string>
    <string name="title_torp">TOV%</string>
    <string name="title_min">MIN</string>
    <string name="title_tsp">TS%</string>
    <string name="title_drebp">DRB%</string>
    <string name="title_trebp">TRB%</string>
    <string name="title_astp">AST%</string>
    <string name="title_stlp">STL%</string>
    <string name="title_blkp">BLK%</string>
    <string name="title_usage">Usage</string>
    <string name="title_offrating">ORtg</string>
    <string name="title_defrating">DRtg</string>
    <string name="title_pts">PTS</string>
    <string name="title_fg">FGM-A</string>
    <string name="title_ft">FTM-A</string>
    <string name="title_3p">3PM-A</string>
    <string name="title_orb">ORB</string>
    <string name="title_drb">DRB</string>
    <string name="title_reb">REB</string>
    <string name="title_ast">AST</string>
    <string name="title_stl">STL</string>
    <string name="title_blk">BLK</string>
    <string name="title_tov">TOV</string>
    <string name="title_pf">PF</string>
    <string name="hawks">Hawks</string>
    <string name="celtics">Celtics</string>
    <string name="nets">Nets</string>
    <string name="bobcats">Bobcats</string>
    <string name="bulls">Bulls</string>
    <string name="cavs">Cavaliers</string>
    <string name="mavs">Mavericks</string>
    <string name="nuggets">Nuggets</string>
    <string name="pistons">Pistons</string>
    <string name="warriors">Warriors</string>
    <string name="rockets">Rockets</string>
    <string name="pacers">Pacers</string>
    <string name="clippers">Clippers</string>
    <string name="lakers">Lakers</string>
    <string name="grizzlies">Grizzlies</string>
    <string name="heat">Heat</string>
    <string name="bucks">Bucks</string>
    <string name="twolves">Timberwolves</string>
    <string name="hornets">Hornets</string>
    <string name="pelicans">Pelicans</string>
    <string name="knicks">Knicks</string>
    <string name="thunder">Thunder</string>
    <string name="magic">Magic</string>
    <string name="sixers">76ers</string>
    <string name="suns">Suns</string>
    <string name="blazers">Trail Blazers</string>
    <string name="spurs">Spurs</string>
    <string name="kings">Kings</string>
    <string name="raptors">Raptors</string>
    <string name="jazz">Jazz</string>
    <string name="wizards">Wizards</string>
    
    <string-array 
        name="drawer_layout_items">
        <item>Schedule</item>
        <item>Standings</item>
        <item>League Leaders</item>
        <item>Team Stats</item>
    </string-array>

</resources>