<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NBAStatStream" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_welcome"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttons" />

    <LinearLayout
        android:id="@id/buttons"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >
        
    <Button
        android:id="@+id/live_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/live_game_label" />

    <Button
        android:id="@+id/archived_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/archived_game_label" />
    </LinearLayout>

</RelativeLayout>