<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="@string/pager_4factors_title" >
    
    <TextView
        android:id="@+id/four_factors_game_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="15.0sp" />

    <ImageView
        android:id="@+id/four_factors_away_logo"
        android:layout_width="100.0dp"
        android:layout_height="100.0dp"
        android:adjustViewBounds="true"
        android:contentDescription="ImageView"
        android:layout_marginLeft="5.0dp"
    	android:layout_marginTop="10.0dp"
    	android:layout_below="@id/four_factors_game_date"
        android:scaleType="fitCenter" />
    
    <TextView
        android:id="@+id/four_factors_away_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/four_factors_away_logo"
        android:layout_alignBottom="@id/four_factors_away_logo"
        android:paddingLeft="10dp"
        android:gravity="left"
        android:lines="2"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed" />

    <TextView
        android:id="@+id/four_factors_away_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/four_factors_away_logo"
        android:layout_above="@id/four_factors_away_name"
        android:typeface="monospace"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:textSize="30.0sp" />

    <ImageView
        android:id="@+id/four_factors_home_logo"
        android:layout_width="100.0dp"
        android:layout_height="100.0dp"
        android:adjustViewBounds="true"
        android:layout_alignParentRight="true"
   	 	android:layout_marginRight="5.0dp"
    	android:layout_marginTop="10.0dp"
    	android:layout_below="@id/four_factors_game_date"
        android:contentDescription="ImageView"
        android:scaleType="fitCenter" />
    
    <TextView
        android:id="@+id/four_factors_home_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/four_factors_home_logo"
        android:layout_alignBottom="@id/four_factors_home_logo"
        android:paddingRight="10dp"
        android:gravity="right"
        android:lines="2"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed" />

    <TextView
        android:id="@+id/four_factors_home_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/four_factors_home_name"
        android:layout_toLeftOf="@id/four_factors_home_logo"
        android:typeface="monospace"
        android:textStyle="bold"
        android:paddingRight="10dp"
        android:textSize="30.0sp" />

    <TextView
        android:id="@+id/four_factors_table_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/four_factors_home_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/pager_4factors_title"
        android:paddingTop="30.0dp"
        android:textSize="50.0sp" />

    <TableLayout
        android:id="@+id/four_factors_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/four_factors_table_title"
        android:layout_centerHorizontal="true"
        android:background="@color/WHITE"
        android:layout_marginTop="15.0dp" >

        <TableRow
            android:layout_margin="0.5dp">

            <TextView
                android:id="@+id/four_factors_title_blank"
                android:padding="3dp"
                android:background="@color/ROW_LIGHT_SLATE_GRAY"
                android:layout_margin="0.5dp"
                android:textSize="15.0sp" />
            
            <TextView
                android:id="@+id/four_factors_title_pace"
                android:padding="3dp"
                android:text="@string/title_pace"
                android:background="@color/ROW_LIGHT_SLATE_GRAY"
                android:textColor="@color/WHITE"
                android:layout_margin="0.5dp"
                android:textSize="15.0sp" />
            
            <TextView
                android:id="@+id/four_factors_title_eff"
                android:padding="3dp"
                android:text="@string/title_eff"
                android:gravity="center_horizontal"
                android:background="@color/ROW_LIGHT_SLATE_GRAY"
                android:textColor="@color/WHITE"
                android:layout_margin="0.5dp"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_title_efg"
                android:padding="3dp"
                android:text="@string/title_efg"
                android:background="@color/ROW_LIGHT_SLATE_GRAY"
                android:textColor="@color/WHITE"
                android:layout_margin="0.5dp"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_title_ftfg"
                android:padding="3dp"
                android:text="@string/title_ftfg"
                android:background="@color/ROW_LIGHT_SLATE_GRAY"
                android:textColor="@color/WHITE"
                android:layout_margin="0.5dp"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_title_oreb"
                android:padding="3dp"
                android:text="@string/title_oreb"
                android:background="@color/ROW_LIGHT_SLATE_GRAY"
                android:textColor="@color/WHITE"
                android:layout_margin="0.5dp"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_title_tor"
                android:padding="3dp"
                android:text="@string/title_tor"
                android:background="@color/ROW_LIGHT_SLATE_GRAY"
                android:textColor="@color/WHITE"
                android:layout_margin="0.5dp"
                android:textSize="15.0sp" />
        </TableRow>

        <TableRow
            android:id="@+id/four_factors_table_away_row"
            android:layout_margin="0.5dp">

            <TextView
                android:id="@+id/four_factors_table_away_team_name"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_game_pace"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_away_eff"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_away_efg"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_away_ftfg"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_away_oreb"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_away_tor"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_GRAY"
                android:textSize="15.0sp" />
        </TableRow>

        <TableRow
            android:id="@+id/four_factors_table_home_row"
            android:layout_margin="0.5dp">
            <TextView
                android:id="@+id/four_factors_table_home_team_name"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_LIGHT_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_home_pace"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_LIGHT_GRAY"
                android:textSize="15.0sp" />
            
            <TextView
                android:id="@+id/four_factors_table_home_eff"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_LIGHT_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_home_efg"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_LIGHT_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_home_ftfg"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_LIGHT_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_home_oreb"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_LIGHT_GRAY"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/four_factors_table_home_tor"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:layout_margin="0.5dp"
                android:background="@color/ROW_LIGHT_GRAY"
                android:textSize="15.0sp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>